--- a/inst/exercises/conceptual/conceptual_Q.Rmd
+++ b/inst/exercises/conceptual/conceptual_Q.Rmd
@@ -1,9 +1,11 @@
 ---
 title: "Conceptual Diagram"
-subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
-author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
+author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "June 2021"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
+subtitle: Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere
 ---
 
 ```{r setup, include=FALSE}
