--- a/inst/exercises/conceptual/conceptual_A.Rmd
+++ b/inst/exercises/conceptual/conceptual_A.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Conceptual Diagram - ANSWERS"
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
-author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
+author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "June 2021"
 output: html_document
 ---
