--- a/inst/exercises/equilibriumHCO3/equilibriumHCO3_A.Rmd
+++ b/inst/exercises/equilibriumHCO3/equilibriumHCO3_A.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Local equilibrium chemistry in R --- part II: Two Equilibrium Reactions'
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
-author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
+author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "February 2021"
 output:
   pdf_document:
