--- a/inst/tutorials/04massbalance/massbalance.Rmd
+++ b/inst/tutorials/04massbalance/massbalance.Rmd
@@ -321,14 +321,10 @@ require(RTM)
 RTMexercise("massbalance")
 ```
 
-## Finally
-
-```{r feedback, echo = FALSE}
-question("give your feedback ", type = "learnr_text", answer(" ", correct=TRUE), correct="thank you", incorrect = "thank you")
-```
-
-## References
-
-See https://en.wikipedia.org/wiki/Photosynthesis for more details about photosynthesis.
+## Textbook and Slides
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
+
+Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
+
+See https://en.wikipedia.org/wiki/Photosynthesis for more details about photosynthesis.
