--- a/inst/tutorials/08equilibrium/equilibrium.Rmd
+++ b/inst/tutorials/08equilibrium/equilibrium.Rmd
@@ -409,12 +409,6 @@ RTMexercise("equilibriumHCO3")
 RTMexercise("equilibriumOMD")
 ```
 
-## Finally
-
-```{r feedback, echo = FALSE}
-question("give your feedback ", type = "learnr_text", answer(" ", correct=TRUE), correct="thank you", incorrect = "thank you")
-```
-
 ## References
 
 R Core Team (2020). R: A language and environment for statistical computing. R
@@ -422,3 +416,5 @@ R Core Team (2020). R: A language and environment for statistical computing. R
   https://www.R-project.org/.
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
+
+Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
